syntax = "proto3";

package contracts.assets;
option csharp_namespace = "Contracts.Protos";
import "google/protobuf/timestamp.proto";

message ChapterPb {
  int32 chapter_id = 1;
  int32 battle_id = 2;
  int32 chapter_num = 3;
  string name = 4;
  string description = 5;
  bool is_active = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message ChaptersPb {
  repeated ChapterPb chapters = 1;
}